Testing out htsget support for SAGE, htsjdk was just one version behind for htsget support

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.hartwig</groupId>
     <artifactId>hmftools</artifactId>
     <packaging>pom</packaging>
-    <version>local-SNAPSHOT</version>
+    <version>sage-6.6.6</version>
     <name>HMF Genomics Tools</name>
 
     <modules>
@@ -58,7 +58,7 @@
         <maven.exec.plugin.version>1.6.0</maven.exec.plugin.version>
         <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
 
-        <hmf-common.version>local-SNAPSHOT</hmf-common.version>
+        <hmf-common.version>sage-6.6.6</hmf-common.version>
 
         <amber.version>4.0</amber.version>
         <bam-tools.version>1.2.1</bam-tools.version>
@@ -84,7 +84,7 @@
         <patient-db.version>5.35</patient-db.version>
         <pave.version>1.6</pave.version>
         <purple.version>4.0.1</purple.version>
-        <sage.version>3.5</sage.version>
+        <sage.version>6.6.6</sage.version>
         <sigs.version>1.2.1</sigs.version>
         <sv-prep.version>1.3</sv-prep.version>
         <sv-tools.version>1.0</sv-tools.version>
@@ -94,7 +94,7 @@
 
         <commons.cli.version>1.3.1</commons.cli.version>
         <immutables.version>2.9.3</immutables.version>
-        <htsjdk.version>2.23.0</htsjdk.version>
+        <htsjdk.version>2.24.0</htsjdk.version>
         <intellij.annotations.version>12.0</intellij.annotations.version>
         <google.guava.version>31.0.1-jre</google.guava.version>
         <google.gson.version>2.8.9</google.gson.version>
