--- a/gripss/pom.xml
+++ b/gripss/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hmftools</artifactId>
         <groupId>com.hartwig</groupId>
-        <version>local-SNAPSHOT</version>
+        <version>sage-6.6.6</version>
     </parent>
 
     <artifactId>gripss</artifactId>
